--- a/build.gradle
+++ b/build.gradle
@@ -51,12 +51,12 @@ dependencies {
 test {
     useJUnitPlatform()
 }
-/*
+
 jlink {
     addExtraDependencies("javafx")
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
-        name = 'signal'
+        name = 'Aquaher'
         jvmArgs = ['-Djdk.gtk.version=2'] // required due to a bug in Java: https://github.com/javafxports/openjdk-jfx/issues/175
     }
     jpackage {
@@ -64,13 +64,17 @@ jlink {
         outputDir = 'my-packaging'
         // imageOutputDir = file("$buildDir/my-packaging-image")
         // installerOutputDir = file("$buildDir/my-packaging-installer")
-        imageName = 'MyApp'
-        imageOptions = ['--win-console']
+        imageName = 'Aquaher'
+        imageOptions = [
+                        '--icon', 'src/main/resources/com/daluga/mds/imagenes/logo.ico']
         skipInstaller = false
-        installerName = 'MyApp'
+        installerName = 'Aquaher'
         installerType = 'exe'
-        installerOptions = ['--win-menu', '--win-shortcut']
+        installerOptions = ['--win-per-user-install', '--win-dir-chooser',
+                            '--win-menu', '--win-shortcut',
+                            '--description', "aplicacion aquaher",
+                            '--copyright', 'Copyrigth 2021 daluga'
+        ]
 
     }
 }
-* */
